--- a/index.html
+++ b/index.html
@@ -8,8 +8,53 @@
   <title>Document</title>
 </head>
 
-<body>
+<!-- Use JavaScript to obtain a reference to the first section with the class of article_header and change its text with the textContent property to "Welcome to the {insert your name here} blog"
 
+  Use JavaScript to obtain a reference to all article__header elements and change their classList property value to article__header important.
+
+  Obtain a reference the element with a class of dashed and remove it.
+
+  Obtain a reference the element with a class of article__footer and add the class of goldenrod it. -->
+
+
+<body>
+  <article class="article">
+    <section class="article__header">
+      Welcome to my blog
+    </section>
+    <section class="article__content">
+      Copper mug small batch meh plaid flexitarian. Before they
+      sold out occupy chartreuse hot chicken, la croix
+      fingerstache offal VHS air plant. Humblebrag blue bottle
+      cred af jean shorts etsy copper mug chicharrones cronut
+      art party scenester pabst chillwave. Distillery 8-bit
+      pabst fashion axe, tousled cloud bread bushwick roof party
+      franzen quinoa fixie.
+    </section>
+    <aside class="aside_box--dark dashed">
+      <div class="article__header">
+        Very important box header
+      </div>
+      Messenger bag sriracha tote bag intelligentsia air plant
+      leggings.
+    </aside>
+    <section class="article__footer">
+      Author: Steve Brownlee
+    </section>
+  </article>
+  <script>
+    // number 1
+    const element = document.querySelector('.article__header');
+    element.textContent = "Welcome to the Daniel blog";
+    //number 2
+    element.classList.add("important");
+    //number 3
+    const noDashed = document.querySelector('.dashed');
+    noDashed.classList.remove('dashed');
+    //number 4
+    const goldenrod = document.querySelector('.article__footer');
+    goldenrod.classList.add('goldenrod');
+  </script>
 </body>
 
 </html>
