Used js code in js file instead of html file

--- a/index.html
+++ b/index.html
@@ -42,18 +42,8 @@
       Author: Steve Brownlee
     </section>
   </article>
-  <script>
-    // number 1
-    const element = document.querySelector('.article__header');
-    element.textContent = "Welcome to the Daniel blog";
-    //number 2
-    element.classList.add("important");
-    //number 3
-    const noDashed = document.querySelector('.dashed');
-    noDashed.classList.remove('dashed');
-    //number 4
-    const goldenrod = document.querySelector('.article__footer');
-    goldenrod.classList.add('goldenrod');
+  <script src="DOMfun.js">
+
   </script>
 </body>
 
